[gd_scene load_steps=20 format=2]

[ext_resource path="res://Client.gd" type="Script" id=1]
[ext_resource path="res://joystick base_Tavola disegno 1.png" type="Texture" id=2]
[ext_resource path="res://joystick_button_Tavola disegno 1.png" type="Texture" id=3]
[ext_resource path="res://joystick_button.gd" type="Script" id=4]
[ext_resource path="res://button.png" type="Texture" id=5]
[ext_resource path="res://CHERI___.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://bigbutton.png" type="Texture" id=7]
[ext_resource path="res://bigbutton_pressed.png" type="Texture" id=8]
[ext_resource path="res://refreshbtn.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 85.0

[sub_resource type="DynamicFont" id=2]
size = 116
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 116
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.517206, 0.789062, 0.443848, 1 )
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.414789, 0.632812, 0.355957, 1 )
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.254902, 0.321569, 0.223529, 1 )
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.462745, 0.709804, 0.396078, 1 )
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="DynamicFont" id=5]
size = 97
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.215686, 0.215686, 0.215686, 1 )

[sub_resource type="DynamicFont" id=7]
size = 80
font_data = ExtResource( 6 )

[node name="Game" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="JoyPad" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1122.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="joystick" type="Sprite" parent="CanvasLayer/JoyPad"]
position = Vector2( 561, 540 )
texture = ExtResource( 2 )

[node name="joystick_button" type="TouchScreenButton" parent="CanvasLayer/JoyPad/joystick"]
normal = ExtResource( 3 )
shape = SubResource( 1 )
script = ExtResource( 4 )

[node name="AB_Buttons" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1122.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A_Button" type="TextureButton" parent="CanvasLayer/AB_Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -311.0
margin_top = -20.0
margin_right = -29.0
margin_bottom = 262.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/AB_Buttons/A_Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -70.0
margin_right = 63.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "A"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_Button" type="TextureButton" parent="CanvasLayer/AB_Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -11.0
margin_top = -290.0
margin_right = 271.0
margin_bottom = -8.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )

[node name="Label" type="Label" parent="CanvasLayer/AB_Buttons/B_Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -70.0
margin_right = 64.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "B"
align = 1
valign = 1

[node name="BigButton" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1122.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BigBtn" type="TextureButton" parent="CanvasLayer/BigButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -281.0
margin_top = -280.0
margin_right = 817.0
margin_bottom = 818.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectPanel" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectBtn" type="Button" parent="CanvasLayer/ConnectPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -431.5
margin_top = 33.0
margin_right = 431.5
margin_bottom = 243.0
focus_mode = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="LineEdit" parent="CanvasLayer/ConnectPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -431.5
margin_top = -178.0
margin_right = 431.5
margin_bottom = 12.0
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
placeholder_text = " IP ADDRESS"

[node name="RefreshBtn" type="TextureButton" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PeerInput" type="Node" parent="."]
script = ExtResource( 1 )
[connection signal="pressed" from="CanvasLayer/AB_Buttons/A_Button" to="PeerInput" method="_on_A_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/AB_Buttons/B_Button" to="PeerInput" method="_on_B_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/BigButton/BigBtn" to="PeerInput" method="_on_BigBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectPanel/ConnectBtn" to="PeerInput" method="_on_ConnectBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/RefreshBtn" to="PeerInput" method="_on_RefreshBtn_pressed"]
